golang/examples/blocking-channels/blocking_channels.go
package main

import "fmt"

func main() {
	ch := make(chan string)
	ch <- "Hello"

	text := <-ch
	fmt.Println(text)
}
